# highflyers-cs-gcs

./: .gitignore  .gitmodules  README.md
src/: HighFlyersCsGcs.sln  UpgradeLog.htm
src/Algorithms/: Algorithms.cproj  Algorithms.md.pc  Algorithms.vcxproj  CMakeLists.txt  algorithm_call.cpp  defines.h  digits.cpp
src/ConsoleGCS/: CMakeLists.txt  ConsoleGCS.cpp  ConsoleGCS.vcxproj  ConsoleGCS.vcxproj.filters  Image_processor.cpp  Image_processor.h  Image_provider.cpp  Image_provider.h  ReadMe.txt  main.cpp  new_digits.cpp  stdafx.cpp
src/HF-CS-GCS/: HF-CS-GCS.csproj  Program.cs  Utils.cs
src/HF-CS-GCS/Communication/: Communication.cs  CommunicationFactory.cs  ICommunication.cs  RS232.cs
src/HF-CS-GCS/GUI/: MainWindow.Designer.cs  MainWindow.cs
src/HF-CS-GCS/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/HF-CS-GCS/Protocol/: FrameBuilder.cs  Parser.cs  Utils.cs
src/HighFlyersCsGCS/: AppConfiguration.cs  ConfigurationDialog.cs  HighFlyersCsGCS.csproj  Logger.cs  MainWindow.cs  PipelineBuilder.cs  Program.cs  RS232.cs  VideoWidget.cs
src/HighFlyersCsGCS/Map/: Coordinate.cs  FileMapWidget.cs  MapWidget.cs
src/HighFlyersCsGCS/Properties/: AssemblyInfo.cs
src/HighFlyersCsGCS/Protocol/: description.hfproto
src/HighFlyersCsGCS/interfaces/: ConfigurationDialog.ui  MainWindow.ui
src/HighFlyersCsGcs/: Communication.cs  HighFlyersCsGcs.csproj  MainWindow.cs  Program.cs  Video.cs
src/gstreamer-plugins/: dummy_processor.cpp  dummy_processor.h  gstreamer-plugins.cproj  gstreamer-plugins.md.pc  plugin.cpp
(+10 files in other folders)
